p2/config/app2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
        - name: app2
          image: paulbouwer/hello-kubernetes:1.2
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app2
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: app2
