p2/config/app3-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app3
  template:
    metadata:
      labels:
        app: app3
    spec:
      containers:
        - name: app3
          image: paulbouwer/hello-kubernetes:1.10.1
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app3
spec:
  ports:
    - port: 80
  selector:
    app: app3
